<resources>
    <string name="app_name">s185092 Patricks Galgespil</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_end_time_in_sec">Det tog %.2f sek</string>
    <string name="display_end_time_in_min">Det tog %d min %d sek</string>
    <string name="display_end_guesses">Du brugte %d forsøg</string>
    <string name="winner">Vinder</string>
    <string name="loser">Taber</string>
    <string name="showTheWord">Ordet var: %s</string>
    <string name="game_title">Galgespil</string>
    <string name="highscore">Highscore</string>
    <string name="start_game">Start spil</string>
    <string name="showHelp_english">Click on \"START GAME\" and try to guess the word hidden in asterisk(stars).
            \n\nSee if you can beat the timer in the bottom of your screen and become number 1!!
            \n\nYou can also see your highscores in \"HIGHSCORE\"</string>

    <string name="showHelp_danish">Klik på \"START SPIL\" og gæt det hemmelige ord gemt i stjernerne.
            \n\nVær hurtigere end timeren i bunden af skærmen og bliv nummer 1!
            \n\nTjek dine vundne spil ud i \"HIGHSCORE\"
            \n\nLås op for fede skins ved at vinde! - følg med i \"UDFORDRINGER\"
            \n\nTjek dine stats ud i \"STATISTIKKER\" og bliv bedre for hver dag!
    </string>

    <string name="keyboard_layout">Tastatur</string>
    <string name="abc">ABC</string>
    <string name="qwerty">QWERTY</string>
    <string name="setting">Indstillinger</string>
    <string name="cancel">Fortryd</string>
    <string name="ok">OK</string>
    <string name="restart">Spil igen</string>
    <string name="home">Hjem</string>
    <string name="word">ordet</string>
    <string name="guesses">forsøg</string>
    <string name="number">999</string>
    <string name="time_used">tiden</string>
    <string name="show_time_used">%.2f sek</string>
    <string name="show_time_used_min">%d min %d sek</string>
    <string name="show_guesses">%d forsøg</string>
    <string name="show_word">Ordet: %s</string>
    <string name="line">__________________________________________________</string>
    <string name="show_pos">%d</string>
    <string name="set_toast">Tastatur er: %s</string>
    <string name="guess_word_field">Henter ord...</string>
    <string name="word_to_guess">Ordet du skal gætte</string>
    <string name="log_out">Log ud</string>
    <string name="createUser">Opret bruger</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Brugernavn</string>
    <string name="already_user_text"><u>Har du en bruger? Klik her!</u></string>
    <string name="log_in_text">Log ind</string>
    <string name="dont_have_user_text"><u>Har du ikke en bruger? Klik her!</u></string>
    <string name="userName_key">userName</string>
    <string name="repeat_password">Gentag password</string>
    <string name="challenges">Udfordringer</string>
    <string name="choose_skins">Vælg skins</string>
    <string name="unlock_skin">Åbner for skin: %s</string>
    <string name="skin_locked">Låst</string>
    <string name="skin_unlocked">Åbent</string>
    <string name="statistics">Statistikker</string>
    <string name="different_stats">Andre stats</string>
    <string name="letter_usage_title">Brugen af bogstaver</string>
    <string name="help_title">Hjælp</string>
    <string name="help">Hjælp</string>
</resources>
